updated to support Scala 2.13 with Spark 3.5.6